Re-work of inventory rendering. Attempts to address issue with scrunching on small screens.

--- a/components/layout/inventory/InventoryItem.css
+++ b/components/layout/inventory/InventoryItem.css
@@ -23,6 +23,7 @@
 .inventoryItemName{
     font-weight: bold;
     text-transform: uppercase;
+    padding: 0 0 0 20px;
 }
 
 .inventoryItemControlButton{
@@ -32,20 +33,21 @@
 .inventoryItemImage{
     width: auto;
     height: auto;
-    max-width: 50px;
-    max-height: 50px;
+    max-width: 100px;
+    max-height: 100px;
 }
 
 .inventoryItemControls{
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+    justify-content: flex-end;
     padding: 10px;
 }
 
 .inventoryItemDelete{
     cursor: pointer;
+    padding: 0 20px;
 }
 .inventoryItemDelete img{
     width: 20px;
